Greater simplification of options + inherited defaults

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-MONGODB_HOST=
-MONGODB_DBNAME=
+DB_HOST=localhost
+DB_NAME=panacea
+APP_SERVE_PORT=3000
 APP_KEY=
 APP_LOG=data/app_log
 APP_LOG_MAX_SIZE=1048576
+NODE_ENV=development
