--- a/config/entities/schemas/Dog.yml
+++ b/config/entities/schemas/Dog.yml
@@ -7,6 +7,7 @@ fields:
         type: id
     name:
         label: Name
+        description: The dog's name
         type: string
         required: true
     breed:
