--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "startdb": "mongod --directoryperdb --dbpath=data/db --logappend --logRotate rename --logpath=data/db_log/mongod.log &",
     "startapp": "nodemon --inspect --exec babel-node index.js",
-    "start": "npm run startdb && npm run startapp"
+    "start": "npm run startdb && npm run startapp",
+    "build:cms": "babel-node build/cms"
   },
   "author": "Barry Fisher <hello@reallifedigital.com> (https://www.reallifedigital.com)",
   "license": "Apache-2.0",
   "devDependencies": {},
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "fs-extra": "^4.0.2",
     "nodemon": "^1.12.1"
   }
 }
