--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DB_HOST=localhost
 DB_NAME=panacea
 APP_SERVE_PORT=3000
+APP_SERVE_HOST=localhost
 APP_KEY=
 APP_LOG=data/app_log
 APP_LOG_MAX_SIZE=1048576
