--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.26.0",
     "chokidar": "^1.7.0",
@@ -35,6 +35,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
+    "debug": "^3.1.0",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "nodemon": "^1.12.1"
