--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "standard --fix",
     "start": "npm run build:cms && npm run start:db && npm run start:app",
     "start:nobuild": "npm run start:db && npm run start:app",
-    "start:db": "mongod --directoryperdb --dbpath=data/db --logappend --logRotate rename --logpath=data/db_log/mongod.log &",
+    "start:db": "mongod --directoryperdb --dbpath=data/db --logappend --logRotate=rename --logpath=data/db_log/mongod.log &",
     "start:app": "nodemon --inspect --exec babel-node index.js"
   },
   "standard": {
