--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:cms": "babel-node build/cms-dev",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "start": "npm run build:cms && npm run start:db && npm run start:app",
+    "start": "npm run start:db && npm run build:cms && npm run start:app",
     "start:nobuild": "npm run start:db && npm run start:app",
     "start:db": "mongod --directoryperdb --dbpath=data/db --logappend --logRotate=rename --logpath=data/db_log/mongod.log &",
     "start:app": "nodemon --exec babel-node index.js"
