Update references to new core API where reference entity types should always be an array

--- a/config/entityTypes/schemas/Cat.yml
+++ b/config/entityTypes/schemas/Cat.yml
@@ -60,11 +60,13 @@ fields:
     many: true
     description: The breeds of cat
     default: Lab
-  livesWithDogs:
-    label: Lives with dogs
-    description: The dogs that the cat lives with
+  livesWithAnimals:
+    label: Lives with dogs and/or cats
+    description: The other animals that the cat lives with
     type: reference
-    references: Dog
+    references:
+        - Dog
+        - Cat
     many: true
   location:
     type: object
