--- a/config/entityTypes/schemas/Dog.yml
+++ b/config/entityTypes/schemas/Dog.yml
@@ -13,7 +13,8 @@ fields:
   livesWithCats:
     label: Lives with cats
     type: reference
-    references: Cat
+    references:
+        - Cat
     many: true
   breed:
     label: Breed
